# rustshark

./: .gitignore  README.md  package-lock.json  package.json  rustshark.config.json  rustshark.sh  start.js
backend/: Cargo.toml  README.md  README_WINDOWS.md  build.rs
backend/.cargo/: config.toml
backend/src/: main.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
backend/src/api/handlers/: capture.rs  filters.rs  packets.rs
backend/src/capture/: manager.rs  mod.rs  parser.rs  windows_helper.rs
backend/src/models/: config.rs  filter.rs  interface.rs  mod.rs  packet.rs  stats.rs
backend/src/utils/: error.rs  logging.rs
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  server.js
frontend/app/: layout.tsx  page.tsx
frontend/app/packets/: page.tsx
frontend/app/packets/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: CaptureControl.tsx  HexViewer.tsx  InterfaceSelector.tsx  Navbar.tsx  PacketTable.tsx  ProtocolChart.tsx  StatsCard.tsx  WebSocketInitializer.tsx
frontend/components/charts/: AddressBarChart.tsx  ProtocolPieChart.tsx  RateAreaChart.tsx
frontend/components/ui/: chart-placeholder.tsx
frontend/lib/: StatsContext.tsx  WebSocketContext.tsx  api.ts  websocket.ts
