[package]
name = "rustshark"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Wireshark-like network packet analyzer with REST API"

[dependencies]
# Network packet capture
pcap = "1.1.0"
pnet = "0.34.0"
pnet_datalink = "0.34.0"

# REST API framework
actix-web = "4.4.0"
actix-rt = "2.9.0"

# Serialization/deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Error handling and utilities
anyhow = "1.0.75"
thiserror = "1.0.49"

# Async
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"

# Logging
log = "0.4.20"
env_logger = "0.10.0"

# CLI argument parsing
clap = { version = "4.4.6", features = ["derive"] }

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# HTTP client for testing
reqwest = { version = "0.11.22", features = ["json"] }

# In-memory data structure
dashmap = "5.5.3"

# Random numbers
rand = "0.8.5"

# UUID generation
uuid = { version = "1.4.1", features = ["v4"] }

# Efficient locks
parking_lot = "0.12.1"
